app/tests/snapshots/tui_smoke__boots_to_loading_state.snap
---
source: tests/tui_smoke.rs
assertion_line: 23
expression: frame
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                    ╭────────────────── Starting ──────────────────╮                                    "
"                                    │                                              │                                    "
"                                    │                                              │                                    "
"                                    │                                              │                                    "
"                                    │ ⣷ Scanning library...                        │                                    "
"                                    │                                              │                                    "
"                                    │                                              │                                    "
"                                    │                                              │                                    "
"                                    │                                              │                                    "
"                                    ╰──────────────────────────────────────────────╯                                    "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
