app/tests/snapshots/tui_smoke__device_connect_flow.snap
---
source: tests/tui_smoke.rs
assertion_line: 103
expression: frame
---
"╭───── Zune 30 (test) ─────╮╭ Zune: Artists ───────╮╭ Tracks (0) ──────────────────────────────────────────────────────╮"
"│   ╭──────────────────╮   ││> Radiohead           ││Select an item from the sidebar                                   │"
"│   │  ┌────────────┐  │   ││                      ││                                                                  │"
"│   │  │     1      │  │   ││                      ││                                                                  │"
"│   │  │   tracks   │  │   ││                      ││                                                                  │"
"│   │  └────────────┘  │   ││                      ││                                                                  │"
"│   │                  │   ││                      ││                                                                  │"
"│   │  |<  ╭────╮  >|  │   ││                      ││                                                                  │"
"│   │      │    │      │   ││                      ││                                                                  │"
"│   │      ╰────╯      │   ││                      ││                                                                  │"
"│   ╰──────────────────╯   ││                      ││                                                                  │"
"│ FW: 3.30                 ││                      ││                                                                  │"
"│ Mfr: Microsoft           ││                      ││                                                                  │"
"│ USB: MTPZ                ││                      ││                                                                  │"
"│ S/N: TEST-0001           ││                      ││                                                                  │"
"╰──────────────────────────╯│                      ││                                                                  │"
"╭ Queue 0 / 0 trk ─────────╮│                      ││                                                                  │"
"│Press 'a' to add.         ││                      ││                                                                  │"
"│                          ││                  ╭────────────────────────╮                                              │"
"│                          ││                  │ Loaded 1 device tracks │                                              │"
"│                          ││                  ╰────────────────────────╯                                              │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"╰──────────────────────────╯│                      ││                                                                  │"
"╭ Log ─────────────────────╮│                      ││                                                                  │"
"│No messages yet.          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          │╰──────────────────────╯╰──────────────────────────────────────────────────────────────────╯"
"│                          │╭──────────────────────────────────────────────────────────────────────────────────────────╮"
"│                          ││ 1 on device                           v:library | a:queue rm | D:delete | C:clr | ?:help │"
"╰──────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────╯"
