app/tests/snapshots/tui_smoke__library_loaded_populates_sidebar.snap
---
source: tests/tui_smoke.rs
assertion_line: 40
expression: frame
---
"╭─────── Device [c] ───────╮╭ Artists ─────────────╮╭ Tracks (0) ──────────────────────────────────────────────────────╮"
"│   ╭──────────────────╮   ││> Radiohead           ││Select an item from the sidebar                                   │"
"│   │  ┌────────────┐  │   ││  Thievery Corporation││                                                                  │"
"│   │  │ No Device  │  │   ││                      ││                                                                  │"
"│   │  │ Press [c]  │  │   ││                      ││                                                                  │"
"│   │  └────────────┘  │   ││                      ││                                                                  │"
"│   │                  │   ││                      ││                                                                  │"
"│   │  |<  ╭────╮  >|  │   ││                      ││                                                                  │"
"│   │      │    │      │   ││                      ││                                                                  │"
"│   │      ╰────╯      │   ││                      ││                                                                  │"
"│   ╰──────────────────╯   ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"╰──────────────────────────╯│                      ││                                                                  │"
"╭ Queue 0 / 0 trk ─────────╮│                      ││                                                                  │"
"│Press 'a' to add.         ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"╰──────────────────────────╯│                      ││                                                                  │"
"╭ Log ─────────────────────╮│                      ││                                                                  │"
"│No messages yet.          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          ││                      ││                                                                  │"
"│                          │╰──────────────────────╯╰──────────────────────────────────────────────────────────────────╯"
"│                          │╭──────────────────────────────────────────────────────────────────────────────────────────╮"
"│                          ││ 3 tracks                                     v:device | a:add | S:sync | q:quit | ?:help │"
"╰──────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────╯"
